// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:image image as form item 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="image"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  颜色
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
                style="transform: scale(1);"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb no-border"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
                    >
                      <div
                        class="mask"
                      >
                        <span />
                      </div>
                      <img
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                        src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:basic 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb show"
    style="transform: scale(1);"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
        >
          <div
            class="mask"
          >
            <span>
              图片
            </span>
          </div>
          <img
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image b"
            src="https://www.baidu.com/img/bd_logo1.png"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-info"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-title"
          title="图片"
        >
          图片
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:enlargeAble & originalSrc & enlargeTitle & showToolbar 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
        >
          <div
            class="mask"
          >
            <span />
          </div>
          <img
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay"
        >
          <a
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay-view-icon"
            data-position="bottom"
            data-tooltip="查看大图"
            target="_blank"
          >
            <icon-mock
              class="icon icon-view"
              icon="view"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:enlargeAble & originalSrc & enlargeTitle & showToolbar: Gallery 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
        >
          <div
            class="mask"
          >
            <span />
          </div>
          <img
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay"
        >
          <a
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay-view-icon"
            data-position="bottom"
            data-tooltip="查看大图"
            target="_blank"
          >
            <icon-mock
              class="icon icon-view"
              icon="view"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:href 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
            style="transform: scale(1);"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Link"
              href="https://github.com/Gengxin-Tech/prismui"
              target="_blank"
              title=""
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg"
                    />
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:preview 预览动作 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
            style="transform: scale(1);"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
                >
                  <div
                    class="mask"
                  >
                    <span />
                  </div>
                  <img
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                    src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              预览图片
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:title & imageCaption 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
        >
          <div
            class="mask"
          >
            <span>
              这是标题
            </span>
          </div>
          <img
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-info"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-title"
          title="这是标题"
        >
          这是标题
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-caption"
          title="这是一段说明"
        >
          这是一段说明
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:width & height 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
          style="height: 200px; width: 200px;"
        >
          <div
            class="mask"
          >
            <span />
          </div>
          <img
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_400,l_1,f_jpg,q_80"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:zoom & maxScale & minScale 调整图片比例动作 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImageField __PRISMUI_COMPONENT_CLASS_PREFIX__ImageField--thumb"
            style="transform: scale(1);"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--contain __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container"
                >
                  <div
                    class="mask"
                  >
                    <span />
                  </div>
                  <img
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                    src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              放大图片
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              缩小图片
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:images images:basic 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImagesField"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Images"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693379/8f2e79f82be0.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693566/552b175ef11d.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Divider __PRISMUI_COMPONENT_CLASS_PREFIX__Divider--solid __PRISMUI_COMPONENT_CLASS_PREFIX__Divider--horizontal"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImagesField"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Images"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693379/8f2e79f82be0.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693566/552b175ef11d.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:images images:enlargeAble & originalSrc & source & title & description 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ImagesField"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Images"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span>
                        图片1
                      </span>
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay-view-icon"
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        class="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span>
                        图片2
                      </span>
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay-view-icon"
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        class="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image __PRISMUI_COMPONENT_CLASS_PREFIX__Image--thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Images-item"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumbWrap"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--cover __PRISMUI_COMPONENT_CLASS_PREFIX__Image-thumb--1-1 __PRISMUI_COMPONENT_CLASS_PREFIX__Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span>
                        图片3
                      </span>
                    </div>
                    <img
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Image-overlay-view-icon"
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        class="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
